kubernetes-yaml/kafka-consumer-deployment .yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer-deployment
  labels:
    app: kafka-consumer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
      - name: app-kafka-consumer
        image: kafka-consumer
        imagePullPolicy: Never
        ports:
        - containerPort: 10000
