kubernetes-yaml/kafka-producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-producer-deployment
  labels:
    app: kafka-producer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kafka-producer
  template:
    metadata:
      labels:
        app: kafka-producer
    spec:
      containers:
      - name: app-kafka-producer
        image: kafka-producer
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
