kubernetes-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  
  - http:
      paths:
      - path: /
        pathType: Prefix      
        backend:
          service:
            name: kafka-producer-service
            port:
              number: 9000
